--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,13 +1,12 @@
 ---
 layout: archive
-title: "个人主页"
+title: "个人简介"
 permalink: /publications/
 author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+
 
 {% include base_path %}
 
